--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <main>
+        <!-- partecipanti -->
+        <div class="flex wrap">
+            <div class="partecipante">
+                <span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=1" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=2" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=3" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=4" alt="Pinco Pallo">
+            </div>
+
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=5" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=6" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=7" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=8" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=9" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=10" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=11" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=12" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=13" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=14" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=15" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=16" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=17" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=18" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=19" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=20" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=21" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=22" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=23" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=24" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=25" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=26" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=27" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=28" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=29" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=30" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=31" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=32" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=33" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=34" alt="Pinco Pallo">
+            </div>
+            <div class="partecipante"><span class="no-audio"><i class="fa-regular fa-microphone-slash"></i> Pinco Pallo</span>
+                <img src="https://picsum.photos/200/110?random=35" alt="Pinco Pallo">
+            </div>
+        </div>
+        <!-- barra strumenti -->
+
+    </main>
+    <div class="strumenti">
+
+    </div>
 </body>
+
 </html>
