--- a/index.html
+++ b/index.html
@@ -12,122 +12,178 @@
 </head>
 
 <body>
-    <main><span class="icone-speaker"><i class="fa-solid fa-table-cells"></i> Speaker View</span> <span class="icone-ridimensiona"><i class="fa-solid fa-maximize"></i></span>
+    <main><span class="icone-speaker"><i class="fa-solid fa-table-cells"></i> Speaker View</span> <span
+            class="icone-ridimensiona"><i class="fa-solid fa-maximize"></i></span>
         <!-- partecipanti -->
         <div class="flex wrap">
             <div class="partecipante">
                 <span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
                 <img src="https://picsum.photos/200/110?random=1" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=2" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=3" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=4" alt="Pinco Pallo">
             </div>
 
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=5" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=6" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=7" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=8" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=9" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=10" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=11" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=12" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=13" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=14" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=15" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=16" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=17" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=18" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=19" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=20" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=21" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=22" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=23" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=24" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=25" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=26" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=27" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=28" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=29" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=30" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=31" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=32" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=33" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=34" alt="Pinco Pallo">
             </div>
-            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            <div class="partecipante"><span class="no-audio"><i class="fa-solid fa-microphone-slash"></i> Pinco
+                    Pallo</span>
                 <img src="https://picsum.photos/200/110?random=35" alt="Pinco Pallo">
             </div>
         </div>
-        <!-- barra strumenti -->
+       
 
-    </main>
-    <div class="strumenti">
-
+    </main> <!-- barra strumenti -->
+    <div class="strumenti flex nowrap just">
+<div class="contenitore-strumenti ">
+<ul>
+    <li><i class="fa-solid fa-microphone up"></i> <br>Mute</li>
+    <li><i class="fa-solid fa-angle-up down"></i></li>
+    <li><i class="fa-solid fa-video up"></i> <br> Stop Video</li>
+    <li><i class="fa-solid fa-angle-up down"></i></li>
+</ul>
+</div>
+<div class="contenitore-strumenti flexg">
+    <li><i class="fa-solid fa-user-plus up"></i> <br>Invite</li>
+    <li><i class="fa-solid fa-user-group up"></i><br> Manage Partecipants</li>
+    <li><i class="fa-solid fa-chart-column up"></i><br> Polling</li>
+    <li><i class="fa-solid fa-share-from-square up"></i><br>Share screen</li>
+    <li><i class="fa-solid fa-angle-up down"></i></li>
+    <li><i class="fa-solid fa-comment up"></i><br> Chat</li>
+    <li><i class="fa-solid fa-record-vinyl up"></i><br> Recoding</li>
+    <li><i class="fa-solid fa-table-cells-large up"></i><br> Brekout Room</li>
+    <li><i class="fa-solid fa-ellipsis up"></i><br> More</li>
+</div>
+<div class="uscita contenitore-strumenti">
+End Meeting
+</div>
     </div>
 </body>
 
