--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <li><i class="fa-solid fa-user-plus up"></i> <br>Invite</li>
     <li><i class="fa-solid fa-user-group up"></i><br> Manage Partecipants</li>
     <li><i class="fa-solid fa-chart-column up"></i><br> Polling</li>
-    <li><i class="fa-solid fa-share-from-square up"></i><br>Share screen</li>
+    <li><i class="fa-solid fa-share-from-square up green"></i><br>Share screen</li>
     <li><i class="fa-solid fa-angle-up down"></i></li>
     <li><i class="fa-solid fa-comment up"></i><br> Chat</li>
     <li><i class="fa-solid fa-record-vinyl up"></i><br> Recoding</li>
